# Optimizing-Fractals

./: .gitignore  CMakeLists.txt  COLORING.md  FractalUI.py  Makefile  PSO.ipynb  README.md  analyzingData.ipynb  calling_c_functions.py  details.md  equation_speed_test.py  finding_cool_fractals.py  fractal_calculations.ipynb  fractal_generation.cpp  fractal_parameters.py  fractal_viewer.py  generating_gallery.ipynb  iteration_counts.ipynb  managingDatabase.ipynb  my_functions.cpp  optimized_fractals.py  optimizing_fractals.ipynb  palettes.py  swarm_optimization.ipynb  testing_optimized_equations.cpp
optimized_fractals_dll/: CMakeLists.txt  ctypes_testing.py  fractal_speed_test.ipynb
optimized_fractals_dll/include/: optimized_fractals.h
optimized_fractals_dll/src/: kernel_source.h  opencl_check.h  opencl_context.cpp  opencl_context.h  opencl_errors.cpp  opencl_errors.h  optimized_fractals.cpp
optimized_fractals_dll/src/kernels/: boolean_fractal.h  slow_fractal.h  standard_fractal.h  standard_julia.h
tests/: equation_speed_test.c  testing_optimized_equations.cpp
